@@ -3,7 +3,10 @@ require_relative "base_service"
 module Files
   class UpdateService < Files::BaseService
     def commit
-      repository.commit_file(current_user, @file_path, @file_content, @commit_message, @target_branch, true)
+      repository.update_file(current_user, @file_path, @file_content,
+                             branch: @target_branch,
+                             previous_path: @previous_path,
+                             message: @commit_message)
     end
   end
 end
